    and initializing an existing remote. When creating a new remote, avoid
    conflicts with other existing (or deleted) remotes with the same name.
  * When an XMPP server has SRV records, try them, but don't then fall
    back to the regular host if they all fail.
  * For long hostnames, use a hash of the hostname to generate the socket
    file for ssh connection caching.

 -- Joey Hess <joeyh@debian.org>  Tue, 09 Jul 2013 19:17:13 -0400

git-annex (4.20130709) unstable; urgency=low

  * --all: New switch that makes git-annex operate on all data stored
    in the git annex, including old versions of files. Supported by
    fsck, get, move, copy.
  * --unused: New switch that makes git-annex operate on all data found
    by the last run of git annex unused. Supported by fsck, get, move, copy.
  * get, move, copy: Can now be run in a bare repository,
    like fsck already could. --all is enabled automatically in this case.
  * merge: Now also merges synced/master or similar branches, which 
    makes it useful to put in a post-receive hook to make a repository
    automatically update its working copy when git annex sync or the assistant
    sync with it.
  * webapp: Fix ssh setup with nonstandard port, broken in last release.
  * init: Detect systems on which git commit fails due to not being able to
    determine the FQDN, and put in a workaround so committing to the git-annex
    branch works.
  * addurl --pathdepth: Fix failure when the pathdepth specified is deeper
    than the urls's path.
  * Windows: Look for .exe extension when searching for a command in path.
  * Pass -f to curl when downloading a file with it, so it propigates failure. 
  * Windows: Fix url to object when using a http remote.
  * webapp: Fix authorized_keys line added when setting up a rsync remote
    on a server that also supports git-annex, to not force running
    git-annex-shell.
  * OSX Mountain Lion: Fixed gpg bundled in dmg to not fail due to a missing
    gpg-agent.